# nuclear_network

./: .gitignore  CMakeLists.txt  Makefile  README  global.hpp  jacobian.cpp  jacobian.hpp  main.cpp  mk  ode_rhs.cpp  ode_rhs.hpp  plot.py  rate_coeffs.cpp  rate_coeffs.hpp
cmake/modules/: FindGSL.cmake
src/: .CMakeLists.txt.swp  CMakeLists.txt  README  global.h  global.hpp  jacobian.c  jacobian.cpp  jacobian.h  main.c  main.cpp  ode_rhs.c  ode_rhs.h  param.h  plot.py  rate_coeffs.c  rate_coeffs.cpp  rate_coeffs.h  rate_coeffs.hpp
